--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '0.11'
 addons:
   code_climate:
-    repo_token: <REPO TOKEN GOES HERE>
+    repo_token: 5a6fb4f6446b34a4a789e47e529c9bc2f3427a71370e3567eb2d4ecea93d8f65
 before_script:
 - npm install -g codeclimate-test-reporter
 after_script:
