--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanocyte-component-trigger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Trigger Component for Nanocyte",
   "main": "index.js",
   "scripts": {
@@ -31,5 +31,8 @@
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.17.0",
     "sinon-chai": "^2.8.0"
+  },
+  "dependencies": {
+    "nanocyte-component-return-value": "^1.0.2"
   }
 }
