--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "nanocyte-component-trigger",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Trigger Component for Nanocyte",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "istanbul cover _mocha -- -R spec"
@@ -29,6 +32,7 @@
     "istanbul": "^0.3.20",
     "mocha": "^2.3.3",
     "mocha-istanbul": "^0.2.0",
+    "semver": "^5.0.3",
     "sinon": "^1.17.0",
     "sinon-chai": "^2.8.0"
   },
