--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul && mocha --reporter json > coverage/mocha.json"
+    "test": "env NODE_ENV=test mocha",
+    "coverage": "nyc npm test",
+    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-"
   },
   "repository": {
     "type": "git",
@@ -29,14 +31,27 @@
     "chai": "^3.3.0",
     "coffee-coverage": "^0.6.3",
     "coffee-script": "^1.10.0",
-    "istanbul": "^0.3.20",
     "mocha": "^2.3.3",
     "mocha-istanbul": "^0.2.0",
+    "mocha-multi": "^0.9.1",
+    "mocha-osx-reporter": "^0.1.2",
+    "nyc": "^8.3.0",
     "semver": "^5.0.3",
     "sinon": "^1.17.0",
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "nanocyte-component-return-value": "^1.0.2"
+  },
+  "nyc": {
+    "cache": true,
+    "reporter": [
+      "text-summary",
+      "lcov",
+      "json"
+    ],
+    "extension": [
+      ".coffee"
+    ]
   }
 }
