--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "env NODE_ENV=test mocha",
+    "test": "mocha",
     "coverage": "nyc npm test",
-    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-"
+    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-",
+    "mocha:json": "env NPM_ENV=test mocha --reporter json > coverage/mocha.json"
   },
   "repository": {
     "type": "git",
@@ -29,10 +30,8 @@
   "homepage": "https://github.com/sqrtofsaturn/nanocyte-component-trigger#readme",
   "devDependencies": {
     "chai": "^3.3.0",
-    "coffee-coverage": "^0.6.3",
     "coffee-script": "^1.10.0",
     "mocha": "^2.3.3",
-    "mocha-istanbul": "^0.2.0",
     "mocha-multi": "^0.9.1",
     "mocha-osx-reporter": "^0.1.2",
     "nyc": "^8.3.0",
